# wasmer-cli

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: mod.rs  package.rs  registry.rs
crates/cli/src/logic/package/: clone.rs  fork.rs  install.rs  mod.rs  publish.rs  run.rs
crates/cli/src/logic/registry/: active.rs  add.rs  config_file.rs  invalidate_token.rs  list_.rs  list_tokens.rs  login.rs  logout.rs  mod.rs  namespaces.rs  new_token.rs  packages.rs  remove.rs  search.rs  upgrade.rs  use_.rs  validate.rs
crates/cli/src/utils/: config.rs
src/: main.rs  package.rs  registry.rs
