[package]
name = "wasmie-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
cli-table = "0.4.7"
colored = "2.0.0"
config = "0.13.3"
config-source = "0.1.1"
confy = "0.5.1"
directories = "4.0.1"
either = "1.8.1"
semver = "1.0.16"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.94"
url = "2.3.1"
